--- a/projects-demo/WIN32-MSVC/WIN32.vcxproj
+++ b/projects-demo/WIN32-MSVC/WIN32.vcxproj
@@ -192,7 +192,9 @@
     <ClCompile Include="..\..\FreeRTOS-Plus\Source\FreeRTOS-Plus-Trace\trcKernel.c" />
     <ClCompile Include="..\..\FreeRTOS-Plus\Source\FreeRTOS-Plus-Trace\trcKernelPort.c" />
     <ClCompile Include="..\..\FreeRTOS-Plus\Source\FreeRTOS-Plus-Trace\trcUser.c" />
+    <ClCompile Include="..\..\FreeRTOS-Shell\frs.c" />
     <ClCompile Include="..\..\FreeRTOS-Shell\frs_task.c" />
+    <ClCompile Include="..\..\FreeRTOS-Shell\user_tasks\ls.c" />
     <ClCompile Include="..\..\FreeRTOS\Source\croutine.c" />
     <ClCompile Include="..\..\FreeRTOS\Source\event_groups.c" />
     <ClCompile Include="..\..\FreeRTOS\Source\list.c" />
@@ -235,14 +237,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\FreeRTOS-Shell\FreeRTOS-Shell.h" />
+    <ClInclude Include="..\..\FreeRTOS-Shell\frs_queue.h" />
     <ClInclude Include="..\..\FreeRTOS-Shell\frs_sh.h" />
-    <ClInclude Include="..\..\FreeRTOS-Shell\frs_user_bg.h" />
-    <ClInclude Include="..\..\FreeRTOS-Shell\frs_user_kill.h" />
-    <ClInclude Include="..\..\FreeRTOS-Shell\frs_user_ls.h" />
-    <ClInclude Include="..\..\FreeRTOS-Shell\frs_user_ps.h" />
+    <ClInclude Include="..\..\FreeRTOS-Shell\frs_user_tasks.h" />
     <ClInclude Include="..\..\FreeRTOS-Shell\frs_task.h" />
-    <ClInclude Include="..\..\FreeRTOS-Shell\frs_user_resume.h" />
-    <ClInclude Include="..\..\FreeRTOS-Shell\frs_user_stop.h" />
     <ClInclude Include="..\..\FreeRTOS\Source\include\croutine.h" />
     <ClInclude Include="..\..\FreeRTOS\Source\include\event_groups.h" />
     <ClInclude Include="..\..\FreeRTOS\Source\include\FreeRTOS.h" />
