1. self-task killing after finishing user tasks 2. added ls, ps, and top user commands 3. improved task list management, including deleting elements

--- a/projects-demo/WIN32-MSVC/WIN32.vcxproj
+++ b/projects-demo/WIN32-MSVC/WIN32.vcxproj
@@ -195,6 +195,8 @@
     <ClCompile Include="..\..\FreeRTOS-Shell\frs.c" />
     <ClCompile Include="..\..\FreeRTOS-Shell\frs_task.c" />
     <ClCompile Include="..\..\FreeRTOS-Shell\user_tasks\ls.c" />
+    <ClCompile Include="..\..\FreeRTOS-Shell\user_tasks\ps.c" />
+    <ClCompile Include="..\..\FreeRTOS-Shell\user_tasks\top.c" />
     <ClCompile Include="..\..\FreeRTOS\Source\croutine.c" />
     <ClCompile Include="..\..\FreeRTOS\Source\event_groups.c" />
     <ClCompile Include="..\..\FreeRTOS\Source\list.c" />
