command kill completed killing task improved

--- a/projects-demo/WIN32-MSVC/WIN32.vcxproj
+++ b/projects-demo/WIN32-MSVC/WIN32.vcxproj
@@ -194,6 +194,7 @@
     <ClCompile Include="..\..\FreeRTOS-Plus\Source\FreeRTOS-Plus-Trace\trcUser.c" />
     <ClCompile Include="..\..\FreeRTOS-Shell\frs.c" />
     <ClCompile Include="..\..\FreeRTOS-Shell\frs_task.c" />
+    <ClCompile Include="..\..\FreeRTOS-Shell\user_tasks\kill.c" />
     <ClCompile Include="..\..\FreeRTOS-Shell\user_tasks\ls.c" />
     <ClCompile Include="..\..\FreeRTOS-Shell\user_tasks\ps.c" />
     <ClCompile Include="..\..\FreeRTOS-Shell\user_tasks\top.c" />
