--- a/projects-demo/WIN32-MSVC/WIN32.vcxproj.filters
+++ b/projects-demo/WIN32-MSVC/WIN32.vcxproj.filters
@@ -175,6 +175,9 @@
     <ClCompile Include="..\..\FreeRTOS-Shell\user_tasks\top.c">
       <Filter>FreeRTOS-Shell\user_tasks</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\FreeRTOS-Shell\user_tasks\kill.c">
+      <Filter>FreeRTOS-Shell\user_tasks</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FreeRTOSConfig.h">
